added <head>into file
Add <head> section into file doc

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<head>
-   <body>
-      
-      
-   <title> Hello there, awesome person!</title>
-   
+<html>
+   <head>
+      <title> My awesome web page</title>
+   </head>
 
-  </body>
+  <body>
+Hello there, awesome persons!
+
+</body>
 </html>
