--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
      
      
      <h1></h1>
+     <img src="https://avatars.githubusercontent.com/u/88020709?v=4">
+
 Hello there, awesome persons!
 
 </body>
