added list of web site
Added web site

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
    </head>
 
   <body>
-     
+   <ol>
+    <li>w³ schools</li>
+    <li>mozila developer</li>
+    <li>mes boss tutorials</li>
+</ol>
+  
      
      <h1></h1>
      <img src="https://avatars.githubusercontent.com/u/88020709?v=4">
