--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
   <body>
    <ol>
-    <li>w³ schools</li>
-    <li>mozila developer</li>
-    <li>mes boss tutorials</li>
+    <li><a href="https://www.w3schools.com/"> w3 schools</a></li>
+    <li><a href="https://developer. mozilla. org/en-us/">mozila developer</li>
+    <li><a href="https://webos.com/"> mess boss videos</li>
 </ol>
   
      
